--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="file:///C:/Users/admin/Downloads/modifi%C3%A9.png
+        <img src="modifié.png
+      "
         " alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Esteban</a></h1>
         <div class="social-links mt-3 text-center">
